enh(vessel) Vessel snapshot indexation has now a countryRegistrationLocation, to be able to filter on it, in the App fix(vessel) Add check to disable the vessel snapshot indexation, when the corresponding ProcessingType is missing